FCG.Catalog/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogapi
  namespace: fcg-prod
  labels:
    app: catalogapi
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  selector:
    matchLabels:
      app: catalogapi

  template:
    metadata:
      labels:
        app: catalogapi
    spec:
      # ✅ Volume CSI para Key Vault
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: kv-fcg-prod-253

      containers:
        - name: catalogapi
          image: acrfcgprod.azurecr.io/catalogapi:__TAG__
          imagePullPolicy: IfNotPresent

          ports:
            - name: http
              containerPort: 8080

          # ✅ Monta o volume CSI (sem isso, o CSI não injeta nada)
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

          # ✅ Variáveis necessárias (como você listou)
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 6

          # ✅ Se travar, reinicia
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 25
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
