FCG.Catalog/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalogapi
  namespace: fcg-prod
spec:
  selector:
    app: catalogapi
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
